fix: new cache dir

--- a/configs/pythia-70m-cirriculum.yml
+++ b/configs/pythia-70m-cirriculum.yml
@@ -1,5 +1,6 @@
 full_data_path: TIGER-Lab/MathInstruct
 model_name_or_path: EleutherAI/pythia-70m-deduped  # path to pretrained foundation llm
+cache_dir: ./cache
 model_max_length: 512
 schedule_name: Full
 result_dir_name: full_mathinstruct_pythia-70m-deduped_3epochs_512_checkpoints 
