--- a/configs/full/pythia-410m_cirriculum_full.yml
+++ b/configs/full/pythia-410m_cirriculum_full.yml
@@ -1,19 +1,19 @@
 full_data_path: TIGER-Lab/MathInstruct
-model_name_or_path: EleutherAI/pythia-410m-deduped
+model_name_or_path: EleutherAI/pythia-410m-deduped  # path to pretrained foundation llm
 cache_dir: ./cache
 model_max_length: 512
-schedule_name: S2L
-result_dir_name: s2l-pythia-410m-cirriculum
+schedule_name: Full
+result_dir_name: pythia-410m_cirriculum_full
 train_args:
   optim: adamw_torch
   num_train_epochs: 3
   per_device_train_batch_size: 4
   per_device_eval_batch_size: 4
   gradient_accumulation_steps: 8
-  evaluation_strategy: "no"
+  eval_strategy: "no"
   save_strategy: "steps"
-  save_steps: 500
-  save_total_limit: 2
+  save_steps: 50
+  save_total_limit: 12
   learning_rate: 2.0e-5
   weight_decay: 0.
   warmup_ratio: 0.03
@@ -24,8 +24,3 @@ train_args:
   group_by_length: TRUE
   full_determinism: TRUE
   seed: 42
-init_label_num: 131020
-n_round: 0
-n_query: 131020
-n_components: 100
-ref_model_path: res/full_mathinstruct_pythia-70m_cirriculum/output
