refactor: better names

--- a/configs/full/pythia-410m_full.yml
+++ b/configs/full/pythia-410m_full.yml
@@ -3,7 +3,7 @@ model_name_or_path: EleutherAI/pythia-410m-deduped  # path to pretrained foundat
 cache_dir: ./cache
 model_max_length: 512
 schedule_name: Full
-result_dir_name: pythia-410m_cirriculum_full
+result_dir_name: pythia-410m_full
 train_args:
   optim: adamw_torch
   num_train_epochs: 3
