--- a/configs/cirriculum/pythia-410m_cirriculum.yml
+++ b/configs/cirriculum/pythia-410m_cirriculum.yml
@@ -1,19 +1,18 @@
 full_data_path: TIGER-Lab/MathInstruct
-model_name_or_path: EleutherAI/pythia-70m-deduped  # path to pretrained foundation llm
+model_name_or_path: EleutherAI/pythia-410m-deduped
 cache_dir: ./cache
 model_max_length: 512
-schedule_name: Full
-result_dir_name: pythia-70m_cirriculum_full
+schedule_name: Cirriculum
+result_dir_name: pythia-410m_cirriculum
 train_args:
   optim: adamw_torch
   num_train_epochs: 3
   per_device_train_batch_size: 4
   per_device_eval_batch_size: 4
   gradient_accumulation_steps: 8
-  eval_strategy: "no"
   save_strategy: "steps"
-  save_steps: 1875
-  save_total_limit: 4
+  save_steps: 50
+  save_total_limit: 2
   learning_rate: 2.0e-5
   weight_decay: 0.
   warmup_ratio: 0.03
@@ -24,3 +23,6 @@ train_args:
   group_by_length: TRUE
   full_determinism: TRUE
   seed: 42
+init_label_num: 5000
+n_components: 100
+ref_model_path: res/pythia-70m_full/output
