--- a/TRL/configs/selection/s2l.yml
+++ b/TRL/configs/selection/s2l.yml
@@ -1,4 +1,4 @@
-losses_dir: "./results/pythia-70m-full/losses"
+losses_dir: "./results/losses"
 dataset_name: "TIGER-Lab/MathInstruct"
 dataset_cutoff: 120000
 n_samples: 5000
