--- a/TRL/configs/410M_S2L.yml
+++ b/TRL/configs/410M_S2L.yml
@@ -1,4 +1,4 @@
 model_path: "EleutherAI/pythia-410m-deduped"
 n_samples: 120000
-dataset_name: "TIGER-Lab/MathInstruct"
+dataset_name: "./results/data/70M-S2L.json"
 output_dir: "./results/pythia-410M-s2l"
