feat: multiple GPU run to save time

--- a/TRL/configs/410M_Instability.yml
+++ b/TRL/configs/410M_Instability.yml
@@ -1,3 +1,4 @@
 model_path: "EleutherAI/pythia-410m-deduped"
 dataset_name: "./results/data/70M-instability.json"
 output_dir: "./results/pythia-410M-instability"
+num_train_epochs: 1
