--- a/TRL/configs/410M_Overall.yml
+++ b/TRL/configs/410M_Overall.yml
@@ -1,3 +1,4 @@
 model_path: "EleutherAI/pythia-410m-deduped"
 dataset_name: "./results/data/70M-overall.json"
 output_dir: "./results/pythia-410M-overall"
+num_train_epochs: 1
