--- a/TRL/configs/410M_Avg.yml
+++ b/TRL/configs/410M_Avg.yml
@@ -2,3 +2,4 @@ model_path: "EleutherAI/pythia-410m-deduped"
 dataset_name: "./results/data/70M-avg.json"
 output_dir: "./results/pythia-410M-avg"
 num_train_epochs: 1
+save_steps: 999999
