refactor: better curriculum trainer

--- a/TRL/configs/410M_Instability.yml
+++ b/TRL/configs/410M_Instability.yml
@@ -1,5 +1,6 @@
 model_path: "EleutherAI/pythia-410m-deduped"
 dataset_name: "./results/data/70M-instability.json"
 output_dir: "./results/pythia-410M-instability"
-num_train_epochs: 1
+num_train_epochs: 3
 save_steps: 999999
+curriculum_method: true
