--- a/TRL/large_configs/410M_Avg.yml
+++ b/TRL/large_configs/410M_Avg.yml
@@ -1,5 +1,6 @@
 model_path: "EleutherAI/pythia-410m-deduped"
 dataset_name: "./large_results/data/70M-avg.json"
 output_dir: "./large_results/pythia-410M-avg"
-num_train_epochs: 1
+num_train_epochs: 3
 save_steps: 999999
+curriculum_method: true
